fix about spacing

--- a/css/personal.css
+++ b/css/personal.css
@@ -19,7 +19,7 @@ body {
 	position: relative;
 	width: 700px;
 	margin-left: 450px;
-	margin-top: 275px;
+	margin-top: 250px;
 	line-height: 1.5;
 	display: inline-block;
 	max-width: 100%;
